# ChangeLog for www-client/midori
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/midori/ChangeLog,v 1.34 2010/08/17 16:22:18 darkside Exp $

*midori-0.2.7 (17 Aug 2010)

  17 Aug 2010; Jeremy Olexa <darkside@gentoo.org> +midori-0.2.7.ebuild,
  metadata.xml:
  Version bump. sqlite is now a a mandatory dep for the bookmarks, USE=html
  is defaulted to enabled for midori's help page, optional vala support
  added. See full ChangeLog for other features here:
  http://releases.xfce.org/feeds/project/midori

  01 Aug 2010; Christian Faulhammer <fauli@gentoo.org> midori-0.2.6.ebuild:
  stable x86, bug 324227

  31 Jul 2010; Markos Chandras <hwoarang@gentoo.org> midori-0.2.6.ebuild:
  Stable on amd64 wrt bug #324227

  24 May 2010; Jeremy Olexa <darkside@gentoo.org> -midori-0.2.5.ebuild:
  remove old, issues with USE=doc. bug 321315

*midori-0.2.6 (24 May 2010)

  24 May 2010; Jeremy Olexa <darkside@gentoo.org> +midori-0.2.6.ebuild:
  Version bump, bug fixes from upstream and improved Speed Dial feature.
  http://releases.xfce.org/feeds/project/midori

*midori-0.2.5 (18 May 2010)

  18 May 2010; Jeremy Olexa <darkside@gentoo.org> +midori-0.2.5.ebuild:
  Version bump, bug 320095. ChangeLog:
  http://releases.xfce.org/feeds/project/midori

  31 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> midori-0.2.4.ebuild,
  midori-9999.ebuild:
  Use Python 2.x instead of Python 3.x for ./waf wrt #302555.

  10 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> midori-0.2.4.ebuild,
  midori-9999.ebuild:
  Introduce strip-linguas logic wrt #307763.

*midori-0.2.4 (08 Mar 2010)

  08 Mar 2010; Jeremy Olexa <darkside@gentoo.org> +midori-0.2.4.ebuild:
  Version bump, many small bug fixes.
  http://releases.xfce.org/feeds/project/midori - bug 306987

  20 Jan 2010; Jeremy Olexa <darkside@gentoo.org> midori-0.2.2.ebuild:
  Add missing bdep on dev-util/intltool, mandatory according to the build
  system
