@@ -4,6 +4,6 @@ DIST midori-0.2.7.tar.bz2 771673 RMD160 f0c9c87358faace9bfcdfbc73e0f16c07cd8a2a7
 EBUILD midori-0.2.4.ebuild 2141 RMD160 0ebe102f6fade647c2780d563144768f08aa6db4 SHA1 66cec13bfe362285f8691673fa37e85dbc828cb5 SHA256 1ae02029bcbdfdcc1586e2a67b86382b82a958eb76d73389eee6a18f06b28d37
 EBUILD midori-0.2.6.ebuild 2135 RMD160 96e9ab416660241387c9c1136e1369561c7bbff7 SHA1 2557546901e839aba5fce2269d26723ceb6b55f6 SHA256 3ecf947a9beca218e0e4df9f80dea5f780d6c0ad87726e51185fdaddb0dfb09a
 EBUILD midori-0.2.7.ebuild 2124 RMD160 152e3c50415b99bdf4bb43eb8c505d767abf6926 SHA1 006cbb09865b97c804e91060a23e9e5130248ddf SHA256 128c8546418d22995329c855cf77dab9dffcb0e4cce6fe6f0b06836d0fb9079c
-EBUILD midori-9999.ebuild 2062 RMD160 d72c1e6dee68a854ee6b627514648fa882c36173 SHA1 06e9fbab9b566909bf9740d59b7fdef78465e734 SHA256 152ba0277d6761716f93e0bb88479492bd26f54c5479b4229e1919fdd48faa43
-MISC ChangeLog 5567 RMD160 7dcf042e518572d0ba390c4701979c20ad4e4352 SHA1 ac4f851291ccea1a4e0c13cfb27f25e92adaab90 SHA256 24831a14a0bf01dfb25bcdbebefb3905ee84a4f3a1c1b1accde91297dd5e2d74
+EBUILD midori-9999.ebuild 2152 RMD160 5204fa24727d11bb054a57372350d61448d15e34 SHA1 ebc94ef8b2118d9261749848ff7a1d4ade8a8c31 SHA256 551340981d6d25afacd8d89bcbac21041ff298c721d119eabafaae948e196538
+MISC ChangeLog 5700 RMD160 7393d4894dca976c949f59fdb3f7f77d4960c12d SHA1 7ae908e0d138b7d0ad3ae4f803c18ec6324baddc SHA256 632559b821e87d5692f388479bc3371a5de7d1629e4186a0721324b7af7a7ed5
 MISC metadata.xml 385 RMD160 531e3d87d3311bf30fcd35344268191c623ee37c SHA1 1445ad982f9661f11fc7855ebd69fd0736f69e2d SHA256 4e337c2ed8ed0e68d9f80a95a95e3a74b7e0625e1a6b6c487b3f88d66ac1a526
