@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/midori/midori-9999.ebuild,v 1.15 2010/03/31 15:03:48 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/midori/midori-9999.ebuild,v 1.16 2010/08/24 19:26:59 darkside Exp $
 
 EAPI=2
 
@@ -8,7 +8,7 @@ PYTHON_DEPEND="2:2.6"
 
 inherit eutils multilib python xfconf git
 
-DESCRIPTION="A lightweight web browser"
+DESCRIPTION="A lightweight web browser based on WebKitGTK+"
 HOMEPAGE="http://www.twotoasts.de/index.php?/pages/midori_summary.html"
 EGIT_REPO_URI="git://git.xfce.org/apps/midori"
 EGIT_PROJECT="midori"
@@ -16,19 +16,20 @@ SRC_URI=""
 
 LICENSE="LGPL-2"
 SLOT="0"
-KEYWORDS=""
-IUSE="doc gnome html idn libnotify nls +sqlite +unique"
+KEYWORDS="~amd64 ~arm ~ppc ~x86 ~x86-fbsd"
+IUSE="doc gnome +html idn libnotify nls +unique vala"
 
 RDEPEND="libnotify? ( x11-libs/libnotify )
 	>=net-libs/libsoup-2.25.2
 	>=net-libs/webkit-gtk-1.1.1
+	>=dev-db/sqlite-3.0
 	dev-libs/libxml2
-	x11-libs/gtk+
+	>=x11-libs/gtk+-2.10:2
 	gnome? ( net-libs/libsoup[gnome] )
 	idn? ( net-dns/libidn )
-	sqlite? ( >=dev-db/sqlite-3.0 )
 	unique? ( dev-libs/libunique )"
 DEPEND="${RDEPEND}
+	dev-util/intltool
 	dev-util/pkgconfig
 	doc? ( dev-util/gtk-doc )
 	html? ( dev-python/docutils )
@@ -40,8 +41,8 @@ pkg_setup() {
 
 src_prepare() {
 	# moving docs to version-specific directory
-	sed -i -e "s:\${DOCDIR}/${PN}:\${DOCDIR}/${PF}/:g" wscript
-	sed -i -e "s:/${PN}/user/midori.html:/${PF}/user/midori.html:g" midori/midori-browser.c
+	sed -i -e "s:\${DOCDIR}/${PN}:\${DOCDIR}/${PF}/:g" wscript || die
+	sed -i -e "s:/${PN}/user/midori.html:/${PF}/user/midori.html:g" midori/midori-browser.c || die
 }
 
 src_configure() {
@@ -51,12 +52,14 @@ src_configure() {
 		--prefix="/usr/" \
 		--libdir="/usr/$(get_libdir)" \
 		--disable-docs \
+		--enable-addons \
 		$(use_enable doc apidocs) \
 		$(use_enable html userdocs) \
 		$(use_enable idn libidn) \
+		$(use_enable libnotify) \
 		$(use_enable nls nls) \
-		$(use_enable sqlite) \
 		$(use_enable unique) \
+		$(use_enable vala) \
 		configure || die "configure failed"
 }
 
@@ -67,7 +70,6 @@ src_compile() {
 
 src_install() {
 	DESTDIR=${D} ./waf install || die "install failed"
-	rm -r "${D}"/usr/share/doc/${PN}
 	dodoc AUTHORS ChangeLog INSTALL TODO || die "dodoc failed"
 }
 
