@@ -1,6 +1,9 @@
 # ChangeLog for www-client/midori
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/midori/ChangeLog,v 1.34 2010/08/17 16:22:18 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/midori/ChangeLog,v 1.35 2010/08/24 19:26:59 darkside Exp $
+
+  24 Aug 2010; Jeremy Olexa <darkside@gentoo.org> midori-9999.ebuild:
+  Align -9999 ebuild with 0.2.7, bug 333779 by Michel Ganguin
 
 *midori-0.2.7 (17 Aug 2010)
 
